--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="portrait"><span class="container"><img src="./images/<%=name%>_1.png" alt=""></span></section>
+    <section class="portrait"><span class="container"><img src="./images/people/<%=name%>_1.png" alt=""></span></section>
     <section class="info">
         <p class="name"><%=name%></p>
         <p class="des"><%= para%></p>
