--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -8,14 +8,14 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style" />
     <meta content="telephone=no" name="format-detection" />
     <link rel="stylesheet" type="text/css" href="styles/detail.css">
-    <title><%= para%></title>
+    <title><%=name%><%= para%></title>
 </head>
 
 <body>
     <section class="portrait"><span class="container"><img src="./images/people/<%=name%>_1.png" alt=""></span></section>
     <section class="info">
         <p class="name"><%=name%></p>
-        <p class="des"><%= para%></p>
+        <p class="des"><%=name%><%= para%></p>
     </section>
     <footer class="share-part">
         <button class="share-btn">分享</button>
