--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -19,7 +19,7 @@
     </section>
     <footer class="share-part">
         <button class="share-btn">分享</button>
- 		<a href="/" class="once-again">在玩一次</a>
+ 		<a href="/" class="once-again">再玩一次</a>
     </footer>
     <footer class="then-info">
         <i class="then-logo"></i><strong>然后</strong><span>好玩的故事接龙</span>
