--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -25,7 +25,7 @@
         <i class="then-logo"></i><strong>然后</strong><span>好玩的故事接龙</span>
         <a class="download" href="http://ranhou.hustonline.net/">下载</a>
     </footer>
-    <!-- <script type="text/javascript" src="dist/index.entry.js"></script> -->
+    <script type="text/javascript" src="dist/detail.entry.js"></script>
 </body>
 
 </html>
