--- a/DevApp/app/styles/index.css
+++ b/DevApp/app/styles/index.css
@@ -406,11 +406,12 @@ body {
 .foot {
   margin: 1.5em 0; }
   .foot .footFont {
-    margin-top: 20px;
+    margin-top: 0;
     width: 45%; }
 
 .refresh {
-  margin: 2em 0; }
+  margin: 3em 0;
+  margin-bottom: 0; }
   .refresh button {
     position: relative;
     box-sizing: border-box;
