--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<img src="'./images/share.png" style="display:none"/>
 	<p class="header"><img src="./images/headerFont.png" alt="" class="headerFont"></p>
 	<div class="container">
 		<p>
