--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<img src="images/share.png" style="position: absolute;z-index: -1;visibility: hidden;" />
+<img src="images/share.png" style="position: absolute;z-index: -1;visibility: hidden; width: 0;" />
 	<p class="header"><img src="./images/headerFont.png" alt="" class="headerFont"></p>
 	<div class="container">
 		<p>
