--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,19 +16,19 @@
 	<p class="header"><img src="./images/headerFont.png" alt="" class="headerFont"></p>
 	<div class="container">
 		<p>
-			<img src="<%= imgs[0]%>" alt="<%= firstName[0]%>">
-			<img src="<%= imgs[1]%>" alt="<%= firstName[1]%>">
-			<img src="<%= imgs[2]%>" alt="<%= firstName[2]%>">
+			<img src="<%= imgs[0]%>" data-firstName="<%= firstName[0]%>">
+			<img src="<%= imgs[1]%>" data-firstName="<%= firstName[1]%>">
+			<img src="<%= imgs[2]%>" data-firstName="<%= firstName[2]%>">
 		</p>
 		<p>
-			<img src="<%= imgs[3]%>" alt="<%= firstName[3]%>">
-			<img src="<%= imgs[4]%>" alt="<%= firstName[4]%>">
-			<img src="<%= imgs[5]%>" alt="<%= firstName[5]%>">
+			<img src="<%= imgs[3]%>" data-firstName="<%= firstName[3]%>">
+			<img src="<%= imgs[4]%>" data-firstName="<%= firstName[4]%>">
+			<img src="<%= imgs[5]%>" data-firstName="<%= firstName[5]%>">
 		</p>
 		<p>
-			<img src="<%= imgs[6]%>" alt="<%= firstName[6]%>">
-			<img src="<%= imgs[7]%>" alt="<%= firstName[7]%>">
-			<img src="<%= imgs[8]%>" alt="<%= firstName[8]%>">
+			<img src="<%= imgs[6]%>" data-firstName="<%= firstName[6]%>">
+			<img src="<%= imgs[7]%>" data-firstName="<%= firstName[7]%>">
+			<img src="<%= imgs[8]%>" data-firstName="<%= firstName[8]%>">
 		</p>
 	</div>
 	<p class="refresh"><button class="refresh-btn">给我刷新</button></p>
