--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,7 @@
 	<p class="foot"><img src="./images/footFont.png" alt="" class="footFont"></p>
 	<script type="text/javascript" src="dist/zepto.entry.js"></script>
     <script type="text/javascript" src="dist/index.entry.js"></script>
+    <script src="http://s11.cnzz.com/stat.php?id=1257814038&web_id=1257814038" language="JavaScript"></script>
 </body>
 
 </html>
