--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -8,7 +8,7 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style" />
     <meta content="telephone=no" name="format-detection" />
     <link rel="stylesheet" type="text/css" href="styles/detail.css">
-    <title>嘿嘿嘿～ 我翻到了<%=name%>的牌！ 今晚<%=firstName%>贵人来<%=share%></title>
+    <title>嘿嘿嘿～ 我翻到了<%=name%>的牌！ 今晚<%=name%>贵人来<%=share%></title>
 </head>
 
 <body>
